--- a/views/homepage-not-signedin/index.ejs
+++ b/views/homepage-not-signedin/index.ejs
@@ -6,19 +6,67 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="12"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="13"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="14"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="15"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="assets/kansas-city-hero.png" alt="First slide">
+            <img class="d-block w-100" src="assets/hero-images/nfl/kansas-city-chiefs-hero.png" alt="0">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="assets/nuggets-hero.png" alt="Second slide">
+            <img class="d-block w-100" src="assets/hero-images/nba/la-lakers-hero.png" alt="1">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="assets/golden-knights-cup.jpeg" alt="Third slide">
+            <img class="d-block w-100" src="assets/hero-images/mlb/la-dodgers-hero.png" alt="2">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="assets/cowboys-hero.jpg" alt="Fourth slide">
+            <img class="d-block w-100" src="assets/hero-images/nhl/pittsburgh-penguins-hero.png" alt="3">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="assets/hero-images/nfl/miami-dolphins-hero.png" alt="4">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="assets/hero-images/mlb/boston-red-sox-hero.png" alt="5">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="assets/hero-images/nba/denver-nuggets-hero.png" alt="6">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="assets/hero-images/nfl/seattle-seahawks-hero.png" alt="7">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="assets/hero-images/nhl/new-york-rangers-hero.png" alt="8">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="assets/hero-images/nfl/dallas-cowboys-hero.png" alt="9">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="assets/hero-images/nba/san-antonio-spurs-hero.png" alt="10">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="assets/hero-images/mlb/atlanta-braves-hero.png" alt="11">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="assets/hero-images/nhl/toronto-maple-leafs-hero.png" alt="12">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="assets/hero-images/nba/boston-celtics-hero.png" alt="13">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="assets/hero-images/mlb/san-francisco-giants-hero.png" alt="14">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="assets/hero-images/nhl/las-vegas-golden-knights-hero.png" alt="15">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -31,4 +79,13 @@
         </a>
       </div>
 </div>
+  <div class="mens-womens-container">
+    <img src="assets/Women.png" alt="" onclick="location.href='/' ">
+    <img src="assets/Men.png" alt=""  onclick="location.href='/' ">
+  </div>
+<script>
+  $('.carousel').carousel({
+  interval: 2000
+})
+</script>
 <%- include('../partials/footer'); %>
