--- a/views/partials/header-admin.ejs
+++ b/views/partials/header-admin.ejs
@@ -14,9 +14,8 @@
 </head>
 <body>
     <div class="topnav">
-        <img src="assets/logo.png" alt="" onclick="location.href=('/')" style="cursor: pointer;">
+        <img src="../assets/logo.png" alt="" onclick="location.href=('/')" style="cursor: pointer;">
         <input type="text" name="" id="" placeholder="Search for your NFL, NBA, MLB & NHL gear here">
-        <a href="/admin-login">Login</a>
     </div>
 <div style="background-color: #000;">
 t
