--- a/views/homepage-not-signedin/index.ejs
+++ b/views/homepage-not-signedin/index.ejs
@@ -1,3 +1,4 @@
+
 <%- include('../partials/header'); %>
 <div class="hero">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -83,6 +84,13 @@
     <img src="assets/Women.png" alt="" onclick="location.href='/' ">
     <img src="assets/Men.png" alt=""  onclick="location.href='/' ">
   </div>
+
+  <div class="crud-container">
+    <a href="#"><img src="assets/homepage-images/nfl-products-banner.png" alt=""></a>
+    <a href="#"><img src="assets/homepage-images/nba-products-banner.png" alt=""></a>
+    <a href="#"><img src="assets/homepage-images/mlb-products-banner.png" alt=""></a>
+    <a href="#"><img src="assets/homepage-images/nhl-products-banner.png" alt=""></a>
+</div>
 <script>
   $('.carousel').carousel({
   interval: 2000
