--- a/views/admin/nba/view-product.ejs
+++ b/views/admin/nba/view-product.ejs
@@ -3,7 +3,7 @@
 <input type="hidden" name="id" value="<%= data.id %>">
 <div class="view-container">
     <div class="side-image">
-        <img src="/assets/admin-images/micah-parsons.png" alt="">
+        <img src="/assets/admin-images/kawhi-leonard.png" alt="">
     </div>
     
     <div class="view-content-container">
@@ -17,12 +17,12 @@
           <h5><b>Category: <%= data.category %></b></h5>
           <p><%= data.product_desc %></p>
             <h3>Priced at: <%= data.price.toLocaleString('en-US', { style: 'currency', currency: 'USD' }) %></h3>
-            <a href="/admin-nfl" class="btn btn-success">Return to Products</a>
+            <a href="/admin-nba" class="btn btn-success">Return to Products</a>
         </div>
       </div>
       
       <div class="side-image">
-        <img src="/assets/admin-images/fred-warner.png" alt="">
+        <img src="/assets/admin-images/damian-lillard.png" alt="">
       </div>
 </div>
 
