--- a/views/admin/admin-landing.ejs
+++ b/views/admin/admin-landing.ejs
@@ -5,7 +5,7 @@
     <p> As an administrator, you now have the ability to manage NFL-related merchandise efficiently and effectively.
 
     </p>
-    <a href="#"><img src="assets/admin-images/nba-products-admin-banner.png" alt=""></a>
+    <a href="/admin-nba"><img src="assets/admin-images/nba-products-admin-banner.png" alt=""></a>
     <a href="#"><img src="assets/admin-images/mlb-products-admin-banner.png" alt=""></a>
     <a href="#"><img src="assets/admin-images/nhl-products-admin-banner.png" alt=""></a>
 </div>
