--- a/views/partials/header-admin.ejs
+++ b/views/partials/header-admin.ejs
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="topnav">
-        <img src="../assets/logo.png" alt="" onclick="location.href=('/')" style="cursor: pointer;">
+        <img src="./assets/logo.png" alt="" onclick="location.href=('/')" style="cursor: pointer;">
         <input type="text" name="" id="" placeholder="Search for your NFL, NBA, MLB & NHL gear here">
     </div>
 <div style="background-color: #000;">
