--- a/views/admin/nba/add-products.ejs
+++ b/views/admin/nba/add-products.ejs
@@ -52,6 +52,7 @@
             <option value="Mens">Mens</option>
             <option value="Womens">Womens</option>
             <option value="Unisex">Unisex</option>
+            <option value="Kids">Kids</option>
         </select>
 
     <div class="form-group">
