--- a/views/admin/nba/view-product.ejs
+++ b/views/admin/nba/view-product.ejs
@@ -17,7 +17,7 @@
           <h5><b>Category: <%= data.category %></b></h5>
           <p><%= data.product_desc %></p>
             <h3>Priced at: <%= data.price.toLocaleString('en-US', { style: 'currency', currency: 'USD' }) %></h3>
-            <a href="/admin-nba" class="btn btn-success">Return to Products</a>
+            <a href="/admin-nba" class="btn btn-dark">Return to Products</a>
         </div>
       </div>
       
