--- a/views/admin/nba/delete-product.ejs
+++ b/views/admin/nba/delete-product.ejs
@@ -33,14 +33,16 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-danger">Delete</button>
+            <button type="submit" class="btn btn-dark">Delete</button>
           </div>
         </div>
       </div>
     </div>
     </form>
     <div style="text-align: center;">
-      <button class="btn btn-danger"data-toggle="modal" data-target="#exampleModal" style="margin-left: -750px; margin-top: 550px;">Delete Product</button>
+      <button class="btn btn-outline-dark"data-toggle="modal" data-target="#exampleModal" style="margin-left: -750px; margin-top: 550px;">Delete Product</button>
+
+
   </div>
       
       <div class="side-image">
